--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ subtitle: ''
 
 description: ''
 keywords:
-author: John Doe
+author: Loo
 language: en
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://ssschnappi.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
